# LearningLLVMStepByStep

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cc
doc/: Syntax.bnf
exercise/: CMakeLists.txt
exercise/01-HelloWorld/: CMakeLists.txt  README.md  hello.cc
exercise/02-Calculator/: CMakeLists.txt  README.md  main.cc
exercise/02-Calculator/doc/: Syntax.bnf
exercise/02-Calculator/include/: AST.h  Codegen.h  Lexer.h  Parser.h  PrintVisitor.h
exercise/02-Calculator/lib/: CMakeLists.txt  Codegen.cc  Lexer.cc  Parser.cc  PrintVisitor.cc
exercise/02-Calculator/tests/: 1.txt  CMakeLists.txt  LexerTest.cc
exercise/03-Variable/: README.md
include/: AST.h  Basic.h  Codegen.h  Diag.h.inc  DiagEngine.h  Lexer.h  Parser.h  PrintVisitor.h  Scope.h  Sema.h  Token.h.inc  Type.h  Version.inc  Version.inc.in
lib/: Basic.cc  CMakeLists.txt  Codegen.cc  DiagEngine.cc  Lexer.cc  Parser.cc  PrintVisitor.cc  Scope.cc  Sema.cc  Type.cc
test/: ExpectError.c  IfBlock.txt  SuccessAssign.c  VarExpr.c  comment.c  for.txt  if.txt  nestedFor.txt  tmp.txt
unittest/: CMakeLists.txt
unittest/Lexer/: CMakeLists.txt  lexer_test.cc
